argocd/cilium-gwa/manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main-gateway
  namespace: gatewayapi
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.1.80
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.h.com"
      allowedRoutes:
        namespaces:
          from: All

    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.h.com"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: h-com-tls
      allowedRoutes:
        namespaces:
          from: All
